@@ -1,5 +1,5 @@
 diff --git a/requirements.txt b/requirements.txt
-index de6d606..fb99aa3 100644
+index 2edf621..6e2b7a2 100644
 --- a/requirements.txt
 +++ b/requirements.txt
 @@ -1,5 +1,5 @@
@@ -14,15 +14,16 @@ index de6d606..fb99aa3 100644
  lxml>=2.3
  Routes>=1.12.3
 -WebOb>=1.2.3,<1.3
-+WebOb>=1.2.3,<=1.3
++WebOb>=1.2.3,<1.4
  greenlet>=0.3.2
  PasteDeploy>=1.5.0
  Paste
-@@ -27,6 +27,5 @@ python-glanceclient>=0.9.0
+@@ -27,7 +27,5 @@ python-glanceclient>=0.9.0
  python-keystoneclient>=0.4.1
  six>=1.4.1
  stevedore>=0.12
 -websockify>=0.5.1,<0.6
+-wsgiref>=0.1.2
  oslo.config>=1.2.0
  pycadf>=0.1.9
 
